# hs-sdl2-mixer

./: sdl2-mixer.cabal
Graphics/UI/SDL/: Mixer.hsc
Graphics/UI/SDL/Mixer/: Types.hsc
Sound/SDL/: Mixer.hsc
Sound/SDL/Mixer/: Types.hsc
