name:                sdl2-mixer
version:             0.1.0.0
synopsis:            Support for SDL2_mixer library.
license:             PublicDomain
license-file:        LICENSE
author:              jdeseno
maintainer:          jdeseno@gmail.com
category:            Graphics
build-type:          Simple
cabal-version:       >=1.10
description:
  FFI Bindings for the SDL2_image SDL extension.
  See https://www.libsdl.org/projects/SDL_image/ for details.

library
  default-language: Haskell2010
  default-extensions:
    CPP,
    ForeignFunctionInterface,
    RecordWildCards
  includes:
    SDL.h,
    SDL_mixer.h

  if !os(windows)
    pkgconfig-depends:
      sdl2 >= 2.0.0,
      SDL2_mixer >= 2.0.0

  build-depends:
    base >=4,
    bytestring,
    SDL2
  ghc-options: -Wall
  exposed-modules:     
    Graphics.UI.SDL.Mixer,
    Graphics.UI.SDL.Mixer.Types

